jsがずれていたので修正

--- a/form.html
+++ b/form.html
@@ -29,6 +29,6 @@
     <button id="next">次へ</button>
     <a href="log.html">ログを見る</a>
   </div>
-  <script src="script-index.js"></script>
+  <script src="script-form.js"></script>
 </body>
 </html>
