--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <div style="margin-top: 20px; text-align: center;">
       <a href="log.html" class="log-button">みんなの投稿ログを見る</a>
     </div>
-  <script src="script-intro.js"></script>
+  <script src="script-index.js"></script>
 </body>
 </html>
