--- a/log.html
+++ b/log.html
@@ -9,7 +9,7 @@
 
   <!-- 戻るボタン -->
   <div class="container" style="text-align: center; padding-top: 10px;">
-    <a href="intro.html" class="back-button">← アプリの説明に戻る</a>
+    <a href="index.html" class="back-button">← アプリの説明に戻る</a>
   </div>
 
   <!-- ログ表示エリア -->
